--- a/3Dchess/final.html
+++ b/3Dchess/final.html
@@ -4,7 +4,9 @@
     <title>Babylon.js Chessboard with STL Export</title>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
     <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-    <script src="https://cdn.babylonjs.com/stlExporter/babylon.stlExporter.min.js"></script>
+    <script src="https://cdn.babylonjs.com/stlExporter/babylon.stlExporter.min
+
+.js"></script>
     <script src="https://cdn.babylonjs.com/gui/babylon.gui.js"></script>
 </head>
 <body>
@@ -17,7 +19,9 @@
         const createScene = () => {
             const scene = new BABYLON.Scene(engine);
 
-            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, BABYLON.Vector3.Zero(), scene);
+            const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI
+
+ / 2.5, 15, BABYLON.Vector3.Zero(), scene);
             camera.attachControl(canvas, true);
 
             const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
@@ -32,7 +36,7 @@
                     const tileMaterial = new BABYLON.StandardMaterial(`tileMat${row}_${col}`, scene);
 
                     // Update colors here
-                    tileMaterial.diffuseColor = (row + col) % 2 === 0 ? new BABYLON.Color3(0.678, 0.847, 0.902) : new BABYLON.Color3(0.169, 0.169, 0.169);
+                    tileMaterial.diffuseColor = (row + col) % 2 === 0 ? new BABYLON.Color3(0.678, 0.847, 0.902) : new BABYLON.Color3(0.827, 0.827, 0.827);
 
                     tile.material = tileMaterial;
                 }
@@ -155,7 +159,7 @@
                 return false;
             }
             else if (piece.name == "knight") {
-                if (((piece.position.x == destination.position.x + 1 || piece.position.x == destination.position.x - 1) && (piece.position.z == destination.position.z + 2 || piece.position.z == destination.position.z - 2)) || ((piece.position.x == destination.position.x + 2 || piece.position.x == destination.position.x - 2) && (piece.position.z == destination.position.z + 1 || piece.position.z == destination.position.z - 1))) {
+                if (((piece.position.x == destination.position.x + 1 || piece.position.x == destination.position.x - 1) && (piece.position.z == destination.position.z + 2 || piece.position.z == destination.position.z - 2)) || ((piece.position.x == destination.position.x + 2 || piece.position.x == destination.position.x - 2) && (piece.position.z == destination.position.z + 1 || destination.position.z == destination.position.z - 1))) {
                     return true;
                 }
             } else if (piece.name == "bishop") {
