--- a/2Dshooter/base.html
+++ b/2Dshooter/base.html
@@ -5,18 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Shooter Game</title>
     <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+        }
         canvas {
             display: block;
-            margin: 0 auto;
             background: #000;
+        }
+        #controls {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 10;
+        }
+        button {
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 16px;
         }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+    <div id="controls">
+        <button id="startButton">Start</button>
+        <button id="stopButton">Stop</button>
+    </div>
+    <canvas id="gameCanvas"></canvas>
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
+
+        function resizeCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        }
+
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas();
 
         const player = {
             x: canvas.width / 2,
@@ -24,7 +54,7 @@
             width: 50,
             height: 50,
             color: 'blue',
-            speed: 5
+            speed: 75
         };
 
         const bullets = [];
@@ -32,6 +62,8 @@
 
         const enemies = [];
         const enemySpeed = 2;
+
+        let gameRunning = false;
 
         function drawPlayer() {
             ctx.fillStyle = player.color;
@@ -53,7 +85,7 @@
                 player.x -= player.speed;
             } else if (event.key === 'ArrowRight' && player.x + player.width < canvas.width) {
                 player.x += player.speed;
-            } else if (event.key === ' ') {
+            } else if (event.key === ' ' && gameRunning) {
                 shoot();
             }
         });
@@ -106,18 +138,28 @@
             });
         }
 
-        setInterval(createEnemy, 1000);
-
         function update() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawPlayer();
-            drawBullets();
-            drawEnemies();
-            checkCollisions();
-            requestAnimationFrame(update);
+            if (gameRunning) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                drawPlayer();
+                drawBullets();
+                drawEnemies();
+                checkCollisions();
+                requestAnimationFrame(update);
+            }
         }
 
-        update();
+        document.getElementById('startButton').addEventListener('click', function() {
+            if (!gameRunning) {
+                gameRunning = true;
+                setInterval(createEnemy, 1000);
+                update();
+            }
+        });
+
+        document.getElementById('stopButton').addEventListener('click', function() {
+            gameRunning = false;
+        });
     </script>
 </body>
 </html>
