--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -23,13 +23,18 @@
             transform: translateX(-50%);
             z-index: 10;
         }
-        #lives {
+        #lives, #score {
             position: absolute;
             top: 10px;
-            right: 10px;
             color: white;
             font-size: 20px;
             z-index: 10;
+        }
+        #lives {
+            right: 10px;
+        }
+        #score {
+            left: 10px;
         }
         button {
             padding: 10px 20px;
@@ -44,6 +49,7 @@
         <button id="stopButton">Stop</button>
     </div>
     <div id="lives">Lives: 10</div>
+    <div id="score">Score: 0</div>
     <canvas id="gameCanvas"></canvas>
     <script>
         const canvas = document.getElementById('gameCanvas');
@@ -63,7 +69,7 @@
             width: 50,
             height: 50,
             color: 'blue',
-            speed: 5
+            speed: 75
         };
 
         const bullets = [];
@@ -74,6 +80,7 @@
 
         let gameRunning = false;
         let lives = 10;
+        let score = 0;
 
         function drawPlayer() {
             ctx.fillStyle = player.color;
@@ -149,6 +156,8 @@
                         bullet.y + bullet.height > enemy.y) {
                         bullets.splice(bulletIndex, 1);
                         enemies.splice(enemyIndex, 1);
+                        score++;
+                        document.getElementById('score').innerText = `Score: ${score}`;
                     }
                 });
             });
@@ -169,7 +178,9 @@
             if (!gameRunning) {
                 gameRunning = true;
                 lives = 10;
+                score = 0;
                 document.getElementById('lives').innerText = `Lives: ${lives}`;
+                document.getElementById('score').innerText = `Score: ${score}`;
                 setInterval(createEnemy, 1000);
                 update();
             }
