--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -63,14 +63,22 @@
         window.addEventListener('resize', resizeCanvas);
         resizeCanvas();
 
+        const playerImage = new Image();
+        playerImage.src = 'path/to/your/player-image.png'; // Replace with your player image path
+
+        const bulletImage = new Image();
+        bulletImage.src = 'path/to/your/bullet-image.png'; // Replace with your bullet image path
+
+        const enemyImage = new Image();
+        enemyImage.src = 'path/to/your/enemy-image.png'; // Replace with your enemy image path
+
         const player = {
-            x: canvas.width / 2,
-            y: canvas.height - 50,
+            x: 50,
+            y: canvas.height / 2,
             width: 50,
             height: 50,
-            color: 'blue',
             speed: 5,
-            dx: 0
+            dy: 0
         };
 
         const bullets = [];
@@ -84,33 +92,31 @@
         let score = 0;
 
         function drawPlayer() {
-            ctx.fillStyle = player.color;
-            ctx.fillRect(player.x, player.y, player.width, player.height);
+            ctx.drawImage(playerImage, player.x, player.y, player.width, player.height);
         }
 
         function shoot() {
             bullets.push({
-                x: player.x + player.width / 2 - 5,
-                y: player.y,
-                width: 10,
-                height: 20,
-                color: 'red'
+                x: player.x,
+                y: player.y + player.height / 2 - 5,
+                width: 20,
+                height: 10
             });
         }
 
         function keyDownHandler(event) {
-            if (event.key === 'ArrowLeft') {
-                player.dx = -player.speed;
-            } else if (event.key === 'ArrowRight') {
-                player.dx = player.speed;
+            if (event.key === 'ArrowUp') {
+                player.dy = -player.speed;
+            } else if (event.key === 'ArrowDown') {
+                player.dy = player.speed;
             } else if (event.key === ' ' && gameRunning) {
                 shoot();
             }
         }
 
         function keyUpHandler(event) {
-            if (event.key === 'ArrowLeft' || event.key === 'ArrowRight') {
-                player.dx = 0;
+            if (event.key === 'ArrowUp' || event.key === 'ArrowDown') {
+                player.dy = 0;
             }
         }
 
@@ -119,30 +125,28 @@
 
         function drawBullets() {
             bullets.forEach((bullet, index) => {
-                bullet.y -= bulletSpeed;
-                if (bullet.y + bullet.height < 0) {
+                bullet.x += bulletSpeed;
+                if (bullet.x + bullet.width > canvas.width) {
                     bullets.splice(index, 1);
                 } else {
-                    ctx.fillStyle = bullet.color;
-                    ctx.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
+                    ctx.drawImage(bulletImage, bullet.x, bullet.y, bullet.width, bullet.height);
                 }
             });
         }
 
         function createEnemy() {
             enemies.push({
-                x: Math.random() * (canvas.width - 50),
-                y: 0,
+                x: canvas.width,
+                y: Math.random() * (canvas.height - 50),
                 width: 50,
-                height: 50,
-                color: 'green'
+                height: 50
             });
         }
 
         function drawEnemies() {
             enemies.forEach((enemy, index) => {
-                enemy.y += enemySpeed;
-                if (enemy.y > canvas.height) {
+                enemy.x -= enemySpeed;
+                if (enemy.x + enemy.width < 0) {
                     enemies.splice(index, 1);
                     lives--;
                     document.getElementById('lives').innerText = `Lives: ${lives}`;
@@ -151,8 +155,7 @@
                         alert('Game Over');
                     }
                 } else {
-                    ctx.fillStyle = enemy.color;
-                    ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+                    ctx.drawImage(enemyImage, enemy.x, enemy.y, enemy.width, enemy.height);
                 }
             });
         }
@@ -176,11 +179,11 @@
         function update() {
             if (gameRunning) {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
-                player.x += player.dx;
-                if (player.x < 0) {
-                    player.x = 0;
-                } else if (player.x + player.width > canvas.width) {
-                    player.x = canvas.width - player.width;
+                player.y += player.dy;
+                if (player.y < 0) {
+                    player.y = 0;
+                } else if (player.y + player.height > canvas.height) {
+                    player.y = canvas.height - player.height;
                 }
                 drawPlayer();
                 drawBullets();
