--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -63,12 +63,20 @@
         window.addEventListener('resize', resizeCanvas);
         resizeCanvas();
 
+        const playerImage = new Image();
+        playerImage.src = 'path/to/your/player-image.png'; // Replace with your player image path
+
+        const bulletImage = new Image();
+        bulletImage.src = 'path/to/your/bullet-image.png'; // Replace with your bullet image path
+
+        const enemyImage = new Image();
+        enemyImage.src = 'path/to/your/enemy-image.png'; // Replace with your enemy image path
+
         const player = {
             x: 50,
             y: canvas.height / 2 - 25,
             width: 50,
             height: 50,
-            color: 'blue',
             speed: 5,
             dy: 0
         };
@@ -84,8 +92,7 @@
         let score = 0;
 
         function drawPlayer() {
-            ctx.fillStyle = player.color;
-            ctx.fillRect(player.x, player.y, player.width, player.height);
+            ctx.drawImage(playerImage, player.x, player.y, player.width, player.height);
         }
 
         function shoot() {
@@ -93,8 +100,7 @@
                 x: player.x + player.width,
                 y: player.y + player.height / 2 - 5,
                 width: 20,
-                height: 10,
-                color: 'red'
+                height: 10
             });
         }
 
@@ -123,8 +129,7 @@
                 if (bullet.x > canvas.width) {
                     bullets.splice(index, 1);
                 } else {
-                    ctx.fillStyle = bullet.color;
-                    ctx.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
+                    ctx.drawImage(bulletImage, bullet.x, bullet.y, bullet.width, bullet.height);
                 }
             });
         }
@@ -134,8 +139,7 @@
                 x: canvas.width,
                 y: Math.random() * (canvas.height - 50),
                 width: 50,
-                height: 50,
-                color: 'green'
+                height: 50
             });
         }
 
@@ -151,8 +155,7 @@
                         alert('Game Over');
                     }
                 } else {
-                    ctx.fillStyle = enemy.color;
-                    ctx.fillRect(enemy.x, enemy.y, enemy.width, enemy.height);
+                    ctx.drawImage(enemyImage, enemy.x, enemy.y, enemy.width, enemy.height);
                 }
             });
         }
