--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -64,7 +64,7 @@
         resizeCanvas();
 
         const playerImage = new Image();
-        playerImage.src = '2Dshooter/caveman.jpeg'; // Replace with your player image path
+        playerImage.src = 'ntriolo.github.io/2Dshooter/caveman.jpeg'; // Replace with your player image path
 
         const bulletImage = new Image();
         bulletImage.src = 'path/to/your/bullet-image.png'; // Replace with your bullet image path
