--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -64,7 +64,7 @@
         resizeCanvas();
 
         const backgroundImage = new Image();
-        backgroundImage.src = 'path/to/your/background-image.jpg'; // Replace with your background image path
+        backgroundImage.src = 'ntriolo.github.io/2Dshooter/caveman background.jpeg'; // Replace with your background image path
 
         const player = {
             x: 50,
