--- a/2Dshooter/final.html
+++ b/2Dshooter/final.html
@@ -64,7 +64,7 @@
         resizeCanvas();
 
         const backgroundImage = new Image();
-        backgroundImage.src = 'https://github.com/ntriolo/ntriolo.github.io/blob/main/2Dshooter/caveman%20background.jpeg'; // Replace with your background image path
+        backgroundImage.src = 'https://github.com/ntriolo/ntriolo.github.io/blob/main/2Dshooter/caveman background.jpeg'; // Replace with your background image path
 
         const player = {
             x: 50,
